--- a/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
@@ -74,7 +74,7 @@
                   <Units>KG</Units>
                   <Value><%= package.weight -%></Value>
                 </Weight>
-                <% if @packaging_type == "YOUR_PACKAGING "%>
+                <% if @packaging_type == "YOUR_PACKAGING" && package.length && package.width && package.height %>
                   <Dimensions>
                     <Length><%= package.length -%></Length>
                     <Width><%= package.width -%></Width>
