--- a/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
@@ -29,14 +29,6 @@
               <MonetaryValue><%= @declared_value %></MonetaryValue>
             </DeclaredValue>      
           <% end %>
-          <% if insured? %>      
-            <Insurance>
-              <BasicFlexibleParcelIndicator>
-                <CurrencyCode><%= @insured_currency %></CurrencyCode>
-                <MonetaryValue><%= @insured_value %></MonetaryValue>
-              </BasicFlexibleParcelIndicator>     
-            </Insurance>
-          <% end %>                
         </PackageServiceOptions>
       <% end %>
             
@@ -77,6 +69,14 @@
               </UnitOfMeasurement>
               <Weight><%= @document_weight %></Weight>
            </PackageWeight>
+           <% if insured? %>      
+             <PackageServiceOptions>
+               <InsuredValue>
+                 <CurrencyCode><%= @insured_currency %></CurrencyCode>             
+                 <MonetaryValue><%= @insured_value %></MonetaryValue>
+               </InsuredValue>
+             </PackageServiceOptions>
+           <% end %>                           
         </Package>
       <% end %>            
       <% if @packages && @packages.size > 0 %>
@@ -101,6 +101,14 @@
                 </UnitOfMeasurement>
                 <Weight><%= package.weight %></Weight>
              </PackageWeight>
+             <% if insured? %>      
+               <PackageServiceOptions>
+                 <InsuredValue>
+                   <CurrencyCode><%= @insured_currency %></CurrencyCode>             
+                   <MonetaryValue><%= @insured_value %></MonetaryValue>
+                 </InsuredValue>
+               </PackageServiceOptions>
+             <% end %>
           </Package>
         <% end %>
       <% end %>
