--- a/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
+++ b/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
@@ -38,7 +38,7 @@
 		  </Contact>
 		<% end -%>
 	</Consignee>
-	<%- if dutiable? %>
+	<% if dutiable %>
 	  <Dutiable>
 		  <DeclaredValue><%= @declared_value %></DeclaredValue>
 		  <DeclaredCurrency><%= @declared_currency %></DeclaredCurrency>
