set ups 00 for document

--- a/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/quote.xml.erb
@@ -61,7 +61,7 @@
       <% if @envelope %>
         <Package>
            <PackagingType>
-              <Code><%= @package_type %></Code>
+              <Code>00</Code>
            </PackagingType>
            <PackageWeight>
               <UnitOfMeasurement>
