--- a/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
+++ b/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
@@ -1,58 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <req:ShipmentValidateRequest xmlns:req="http://www.dhl.com" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.dhl.com ship-val-req.xsd">
-	<Request>
-		<ServiceHeader>
+  <Request>
+    <ServiceHeader>
       <SiteID><%= @site_id %></SiteID>
       <Password><%= @password %></Password>
-		</ServiceHeader>
-	</Request>
-	<RequestedPickupTime>Y</RequestedPickupTime>
-	<NewShipper>Y</NewShipper>	
-	<LanguageCode><%= @language_code %></LanguageCode>
-	<PiecesEnabled><%= @pieces_enabled %></PiecesEnabled>
-	<Billing>
-		<ShipperAccountNumber><%= @shipper_account_number %></ShipperAccountNumber>
-		<ShippingPaymentType><%= @shipper_payment_type %></ShippingPaymentType>
-		<% if billing_account_number %>
-		  <BillingAccountNumber><%= @shipper_account_number %></BillingAccountNumber>
-		<% end -%>
-		<% if duty_payment_type %>
-		  <DutyPaymentType><%= @duty_payment_type %></DutyPaymentType>
-		<% end %>		  
-		<% if duty_account_number %>
-		  <DutyAccountNumber><%= @shipper_account_number %></DutyAccountNumber>
-		<% end %>
-	</Billing>
-	<Consignee>
-		<CompanyName><%= @consignee_company %></CompanyName>
-		<AddressLine><%= @consignee_address_line %></AddressLine>
-		<City><%= @consignee_city %></City>
-		<PostalCode><%= @consignee_postalcode %></PostalCode>
-		<CountryCode><%= @consignee_countrycode %></CountryCode>
-		<CountryName><%= @consignee_countryname %></CountryName>
-		<% if @contact_consignee_fullname %>		
-		  <Contact>
-		  	<PersonName><%= @contact_consignee_fullname %></PersonName>
-		  	<PhoneNumber><%= @contact_consignee_phonenumber %></PhoneNumber>
-		  	<PhoneExtension></PhoneExtension>
-		  </Contact>
-		<% end -%>
-	</Consignee>
-	<% if dutiable %>
-	  <Dutiable>
-		  <DeclaredValue><%= @declared_value %></DeclaredValue>
-		  <DeclaredCurrency><%= @declared_currency %></DeclaredCurrency>
-	  </Dutiable>
-	<% end -%>
-	<% if shipment_reference %>
-	  <Reference>
-		  <ReferenceID><%= @shipment_reference %></ReferenceID>
-	  </Reference>		
-	<% end %>	
-	<ShipmentDetails>
-		<NumberOfPieces><%= @shipment_details_number_of_pieces %></NumberOfPieces>		
+    </ServiceHeader>
+  </Request>
+  <RequestedPickupTime>Y</RequestedPickupTime>
+  <NewShipper>N</NewShipper>  
+  <LanguageCode><%= @language_code %></LanguageCode>
+  <PiecesEnabled><%= @pieces_enabled %></PiecesEnabled>
+  <Billing>
+    <ShipperAccountNumber><%= @shipper_account_number %></ShipperAccountNumber>
+    <ShippingPaymentType><%= @shipper_payment_type %></ShippingPaymentType>
+    <% if billing_account_number %>
+      <BillingAccountNumber><%= @shipper_account_number %></BillingAccountNumber>
+    <% end -%>
+    <% if duty_payment_type %>
+      <DutyPaymentType>R  </DutyPaymentType>
+    <% end %>     
+  </Billing>
+  <Consignee>
+    <CompanyName><%= @consignee_company %></CompanyName>
+    <AddressLine><%= @consignee_address_line %></AddressLine>
+    <City><%= @consignee_city %></City>
+    <PostalCode><%= @consignee_postalcode %></PostalCode>
+    <CountryCode><%= @consignee_countrycode %></CountryCode>
+    <CountryName><%= @consignee_countryname %></CountryName>
+    <% if @contact_consignee_fullname %>    
+      <Contact>
+        <PersonName><%= @contact_consignee_fullname %></PersonName>
+        <PhoneNumber><%= @contact_consignee_phonenumber %></PhoneNumber>
+        <PhoneExtension></PhoneExtension>
+      </Contact>
+    <% end -%>
+  </Consignee>
+  <% if dutiable %>
+    <Dutiable>
+      <DeclaredValue><%= @declared_value %></DeclaredValue>
+      <DeclaredCurrency><%= @declared_currency %></DeclaredCurrency>
+    </Dutiable>
+  <% end -%>
+  <% if shipment_reference %>
+    <Reference>
+      <ReferenceID><%= @shipment_reference %></ReferenceID>
+    </Reference>    
+  <% end %> 
+  <ShipmentDetails>
+    <NumberOfPieces><%= @shipment_details_number_of_pieces %></NumberOfPieces>    
     <% if @pieces && @pieces.size > 0 %>
-		  <Pieces>    
+      <Pieces>    
         <% @pieces.each_with_index do |piece, i| -%>
           <Piece>
             <PieceID><%= piece.piece_id = i + 1 %></PieceID>             
@@ -76,45 +73,44 @@
             <% end -%> 
           </Piece>
         <% end -%>
-		  </Pieces>      
+      </Pieces>      
     <% end -%>
-		<Weight><%= @shipment_details_weight %></Weight>
-		<WeightUnit>K</WeightUnit>
-		<GlobalProductCode><%= @shipment_details_global_product_code %></GlobalProductCode>
-		<LocalProductCode><%= @shipment_details_local_product_code %></LocalProductCode>
-		<Date><%= @shipment_details_date.strftime("%Y-%m-%d") %></Date>
-    <% if @shipment_details_content %>		
-		  <Contents><%= @shipment_details_content %></Contents>
-		<% end %>
-		<DimensionUnit>C</DimensionUnit>
-		<% if @shipment_details_insured_amount %>
-		  <InsuredAmount><%= @shipment_details_insured_amount %></InsuredAmount>
-		<% end -%>                                  		  		
-		<IsDutiable><%= isDutiable %></IsDutiable>
-		<CurrencyCode><%= @shipment_details_currency_code %></CurrencyCode>
-	</ShipmentDetails>
-	<Shipper>
-	  <% if @shipper_shipper_id %>
-		  <ShipperID><%= @shipper_shipper_id %></ShipperID>
-		<% end %>
-		<CompanyName><%= @shipper_company %></CompanyName>
-	  <% if @shipper_account_number %>		
-      <RegisteredAccount><%= @shipper_account_number %></RegisteredAccount>		
+    <Weight><%= @shipment_details_weight %></Weight>
+    <WeightUnit>K</WeightUnit>
+    <GlobalProductCode><%= @shipment_details_global_product_code %></GlobalProductCode>
+    <LocalProductCode><%= @shipment_details_local_product_code %></LocalProductCode>
+    <Date><%= @shipment_details_date.strftime("%Y-%m-%d") %></Date>
+    <% if @shipment_details_content %>    
+      <Contents><%= @shipment_details_content %></Contents>
+    <% end %>
+    <DimensionUnit>C</DimensionUnit>
+    <% if @shipment_details_insured_amount %>
+      <InsuredAmount><%= @shipment_details_insured_amount %></InsuredAmount>
+    <% end -%>                                            
+    <IsDutiable><%= isDutiable %></IsDutiable>
+    <CurrencyCode><%= @shipment_details_currency_code %></CurrencyCode>
+  </ShipmentDetails>
+  <Shipper>
+    <% if @shipper_shipper_id %>
+      <ShipperID><%= @shipper_shipper_id %></ShipperID>
+    <% end %>
+    <CompanyName><%= @shipper_company %></CompanyName>
+    <% if @shipper_account_number %>    
+      <RegisteredAccount><%= @shipper_account_number %></RegisteredAccount>   
     <% end %>      
-		<AddressLine><%= @shipper_address_line %></AddressLine>
-		<City><%= @shipper_city %></City>
-		<Division><%= @shipper_countryname %></Division>
-		<PostalCode><%= @shipper_postalcode %></PostalCode>		
-		<CountryCode><%= @shipper_countrycode %></CountryCode>
-		<CountryName><%= @shipper_countryname %></CountryName>
-		<% if @contact_shipper_fullname %>
-		  <Contact>
-			  <PersonName><%= @contact_shipper_fullname %></PersonName>
-			  <PhoneNumber><%= @contact_shipper_phonenumber %></PhoneNumber>
-			  <PhoneExtension></PhoneExtension>
-		  </Contact>
-	  <% end -%>
-	</Shipper>
-	<EProcShip>N</EProcShip>
-	<LabelImageFormat>PDF</LabelImageFormat>	
+    <AddressLine><%= @shipper_address_line %></AddressLine>
+    <City><%= @shipper_city %></City>
+    <PostalCode><%= @shipper_postalcode %></PostalCode>   
+    <CountryCode><%= @shipper_countrycode %></CountryCode>
+    <CountryName><%= @shipper_countryname %></CountryName>
+    <% if @contact_shipper_fullname %>
+      <Contact>
+        <PersonName><%= @contact_shipper_fullname %></PersonName>
+        <PhoneNumber><%= @contact_shipper_phonenumber %></PhoneNumber>
+        <PhoneExtension></PhoneExtension>
+      </Contact>
+    <% end -%>
+  </Shipper>
+  <EProcShip>N</EProcShip>
+  <LabelImageFormat>PDF</LabelImageFormat>  
 </req:ShipmentValidateRequest>
