--- a/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
+++ b/lib/active_shipping/shipping/carriers/dhl/templates/shipment_validation.xml.erb
@@ -100,6 +100,7 @@
     <% end %>      
     <AddressLine><%= @shipper_address_line %></AddressLine>
     <City><%= @shipper_city %></City>
+    <Division></Division>    
     <PostalCode><%= @shipper_postalcode %></PostalCode>   
     <CountryCode><%= @shipper_countrycode %></CountryCode>
     <CountryName><%= @shipper_countryname %></CountryName>
