--- a/lib/active_shipping/shipping/carriers/fedex/templates/pickup.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/pickup.xml.erb
@@ -36,7 +36,7 @@
             <CountryCode><%= @country %></CountryCode>
           </Address>
         </PickupLocation>
-        <PackageLocation><%= @package_location %></PackageLocation>
+        <PackageLocation>NONE</PackageLocation>
         <BuildingPartDescription/>
         <ReadyTimestamp><%= @pickup_time.strftime('%FT%T%:z') %></ReadyTimestamp>
         <CompanyCloseTime><%= @close_time %></CompanyCloseTime>
