pdf format fedex

--- a/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/shipment.xml.erb
@@ -127,7 +127,7 @@
         <LabelSpecification>
           <LabelFormatType>COMMON2D</LabelFormatType>
           <ImageType>PDF</ImageType>
-          <LabelStockType>PAPER_7X4.75</LabelStockType>
+          <LabelStockType>PAPER_LETTER</LabelStockType>
         </LabelSpecification>                               
         <RateRequestTypes>ACCOUNT</RateRequestTypes>
 
