--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -72,7 +72,7 @@
       </PackagingType>
       <PackageWeight>
         <UnitOfMeasurement>KGS</UnitOfMeasurement>
-        <Weight>60.0</Weight>
+        <Weight><%= calculate_weight %></Weight>
       </PackageWeight>
     </Package>
   </Shipment>
