--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -74,6 +74,11 @@
         <UnitOfMeasurement>KGS</UnitOfMeasurement>
         <Weight><%= calculate_weight %></Weight>
       </PackageWeight>
+      <% unless @reference.blank? %>      
+        <ReferenceNumber>
+          <Value><%= @reference %></Value>
+        </ReferenceNumber>      
+      <% end %>
     </Package>
   </Shipment>
 </ShipmentConfirmRequest>
