--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -68,7 +68,7 @@
     </Service>
     <Package>
       <PackagingType>
-        <Code>02/Code>
+        <Code>02</Code>
       </PackagingType>
       <PackageWeight>
         <UnitOfMeasurement>KGS</UnitOfMeasurement>
