--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -6,7 +6,7 @@
 <ShipmentConfirmRequest>
   <Request>
     <RequestAction>ShipConfirm</RequestAction>
-    <RequestOption>validate</RequestOption>
+    <RequestOption>novalidate</RequestOption>
   </Request>
   <LabelSpecification>
      <LabelPrintMethod>
