--- a/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
+++ b/lib/active_shipping/shipping/carriers/ups/templates/ship_confirm.xml.erb
@@ -33,7 +33,7 @@
      </Address>
     </Shipper>
     <ShipTo>
-      <CompanyName><%= @ship_to_company %></CompanyName>
+      <CompanyName><%= calculate_company %></CompanyName>
       <AttentionName><%= @ship_to_name %></AttentionName>
       <PhoneNumber><%= @ship_to_phone %></PhoneNumber>
       <Address>
