--- a/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
+++ b/lib/active_shipping/shipping/carriers/fedex/templates/quote.xml.erb
@@ -81,7 +81,7 @@
                 <% if @insured_value && @insured_currency %>            
                   <InsuredValue>
                     <Currency><%= @insured_currency %></Currency>
-                    <Amount><%= @insured_value %></Amount>
+                    <Amount><%= insure_for_package(package) %></Amount>
                   </InsuredValue>                         
                 <% end %>              
                 <Weight>
